--- a/templates/partials/left_sidebar.html
+++ b/templates/partials/left_sidebar.html
@@ -5,7 +5,7 @@
     <!-- Brand Logo Light -->
     <a href="/" class="logo logo-light">
         <span class="logo-lg">
-            <img src="/static/assets/images/logo-dark-afarinick.png" style="height:60" alt="logo">
+            <img src="/static/assets/images/logo-dark-afarinick.png" height="60" alt="logo">
         </span>
         <span class="logo-sm">
             <img src="/static/assets/images/logo-dark-afarinick.png" alt="small logo">
