--- a/templates/web_base.html
+++ b/templates/web_base.html
@@ -275,36 +275,39 @@
             </div>
         </div>
 
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
+        <!-- Replace from line 157 in your base template with this: -->
 
+<!-- Load jQuery FIRST via vendor.min.js -->
+<script src="/static/assets/js/vendor.min.js"></script>
 
-<!-- Select2 JS (Must come after jQuery) -->
+<!-- Now load all jQuery plugins -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
 <!-- DataTables JS -->
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-
-<!-- FontAwesome -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+<script src="https://cdn.datatables.net/responsive/2.5.0/js/dataTables.responsive.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.bootstrap5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.colVis.min.js"></script>
 
 <!-- DataTables Extensions -->
-<script src="https://cdn.datatables.net/buttons/2.3.6/js/dataTables.buttons.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.html5.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.print.min.js"></script>
-<script src="https://cdn.datatables.net/buttons/2.3.6/js/buttons.colVis.min.js"></script>
 
+<!-- FontAwesome -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/all.min.js"></script>
+
+<!-- Other libraries -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-
-<!-- Include Chart.js -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<!-- Include Leaflet for Maps -->
+
+<!-- Leaflet for Maps -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <!-- Leaflet Plugins -->
@@ -312,27 +315,22 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.markercluster/1.4.1/MarkerCluster.Default.css" />
 <script src="https://cdn.jsdelivr.net/npm/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script>
 
+<!-- Daterangepicker js -->
+<script src="/static/assets/vendor/daterangepicker/moment.min.js"></script>
+<script src="/static/assets/vendor/daterangepicker/daterangepicker.js"></script>
 
-<!-- SweetAlerts -->
-        <!-- Vendor js -->
-        <script src="/static/assets/js/vendor.min.js"></script>
+<!-- Apex Charts js -->
+<script src="/static/assets/vendor/apexcharts/apexcharts.min.js"></script>
 
-        <!-- Daterangepicker js -->
-        <script src="/static/assets/vendor/daterangepicker/moment.min.js"></script>
-        <script src="/static/assets/vendor/daterangepicker/daterangepicker.js"></script>
+<!-- Vector Map js -->
+<script src="/static/assets/vendor/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="/static/assets/vendor/admin-resources/jquery.vectormap/maps/jquery-jvectormap-world-mill-en.js"></script>
 
-        <!-- Apex Charts js -->
-        <script src="/static/assets/vendor/apexcharts/apexcharts.min.js"></script>
+<!-- Dashboard App js -->
+<script src="/static/assets/js/pages/demo.dashboard.js"></script>
 
-        <!-- Vector Map js -->
-        <script src="/static/assets/vendor/admin-resources/jquery.vectormap/jquery-jvectormap-1.2.2.min.js"></script>
-        <script src="/static/assets/vendor/admin-resources/jquery.vectormap/maps/jquery-jvectormap-world-mill-en.js"></script>
-
-        <!-- Dashboard App js -->
-        <script src="/static/assets/js/pages/demo.dashboard.js"></script>
-
-        <!-- App js -->
-        <script src="/static/assets/js/app.min.js"></script>
+<!-- App js -->
+<script src="/static/assets/js/app.min.js"></script>
 
     </body>
 </html>
