--- a/templates/auth/auth-login.html
+++ b/templates/auth/auth-login.html
@@ -7,13 +7,13 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Log In | Jidox - Material Design Admin & Dashboard Template</title>
+        <title>Farm Management System</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
         <meta content="mannatthemes" name="author" />
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="/static/assets/images/favicon.ico">
+        <link rel="shortcut icon" href="/static/assets/images/logo-light (1)-afarinick.png">
         
         <!-- Theme Config Js -->
         <script src="/static/assets/js/config.js"></script>
