--- a/templates/web_base.html
+++ b/templates/web_base.html
@@ -263,7 +263,7 @@
                 </div>
 
             </div>
-            <div class="offcanvas-footer border-top p-3 text-center">
+            <div class="offcanvas-footer border-top p-3 text-center" style="display: none;">
                 <div class="row">
                     <div class="col-6">
                         <button type="button" class="btn btn-light w-100" id="reset-layout">Reset</button>
