--- a/portal/templates/portal/Farms/map.html
+++ b/portal/templates/portal/Farms/map.html
@@ -673,7 +673,7 @@ function initializeMap() {
 
     // View full details
     window.viewFarmDetails = function(farmId) {
-        window.open(`/farms/farm-details/`, '_blank');
+        window.open(`/api/farm-details/`, '_blank');
     }
 
     // Search farms
