--- a/sensors/templates/sensors/device_detail.html
+++ b/sensors/templates/sensors/device_detail.html
@@ -544,9 +544,9 @@
         </div>
         
         <div class="device-actions">
-            <a href="/sensors/devices/management/" class="btn btn-secondary">
+            <a href="/sensors/dashboard/" class="btn btn-secondary">
                 <span>←</span>
-                <span>Back to Devices</span>
+                <span>Back to Dashboard</span>
             </a>
             <button class="btn btn-primary" onclick="refreshData()">
                 <span>🔄</span>
