--- a/templates/web_base.html
+++ b/templates/web_base.html
@@ -11,6 +11,9 @@
         <!-- App favicon -->
         <link rel="shortcut icon" href="/static/assets/images/logo-light (1)-afarinick.png">
 
+        <!-- Load Remixicon FIRST via CDN -->
+        <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
         <!-- Daterangepicker css -->
         <link rel="stylesheet" href="/static/assets/vendor/daterangepicker/daterangepicker.css">
 
@@ -33,8 +36,8 @@
         <!-- App css -->
         <link href="/static/assets/css/app.min.css" rel="stylesheet" type="text/css" id="app-style" />
 
-        <!-- Icons css -->
-        <link href="/static/assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <!-- Icons css - REMOVE or COMMENT this line if using CDN -->
+        <!-- <link href="/static/assets/css/icons.min.css" rel="stylesheet" type="text/css" /> -->
     </head>
 
     <body>
