--- a/templates/web_base.html
+++ b/templates/web_base.html
@@ -78,15 +78,9 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-6">
-                                <script>document.write(new Date().getFullYear())</script> © Jidox - mannatthemes.com
+                                <script>document.write(new Date().getFullYear())</script> © Farm Management System - Afarinick
                             </div>
-                            <div class="col-md-6">
-                                <div class="text-md-end footer-links d-none d-md-block">
-                                    <a href="javascript: void(0);">About</a>
-                                    <a href="javascript: void(0);">Support</a>
-                                    <a href="javascript: void(0);">Contact Us</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                 </footer>
