--- a/portal/templates/portal/personnel/staff_assignments_overview.html
+++ b/portal/templates/portal/personnel/staff_assignments_overview.html
@@ -84,7 +84,7 @@
 <br>
 
 <!-- Filters Row -->
-<div class="row mb-3">
+<!-- <div class="row mb-3">
     <div class="col-12">
         <div class="card">
             <div class="card-body">
@@ -122,7 +122,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 <!-- Main Table -->
 <div class="row">
