--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -146,7 +146,7 @@
                             </div>
                         </li> -->
 
-                        <li class="dropdown notification-list">
+                        <li class="dropdown notification-list" style="display: none;">
                             <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="index.html#" role="button" aria-haspopup="false" aria-expanded="false">
                                 <i class="ri-notification-3-fill fs-22"></i>
                                 <span class="noti-icon-badge"></span>
@@ -267,64 +267,13 @@
                             </div>
                         </li>
 
-                        <li class="dropdown d-none d-sm-inline-block">
-                            <a class="nav-link dropdown-toggle arrow-none" data-bs-toggle="dropdown" href="index.html#" role="button" aria-haspopup="false" aria-expanded="false">
-                                <i class="ri-apps-2-fill fs-22"></i>
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-end dropdown-menu-animated dropdown-lg p-0">
+                        
 
-                                <div class="p-2">
-                                    <div class="row g-0">
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/github.png" alt="Github">
-                                                <span>GitHub</span>
-                                            </a>
-                                        </div>
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/bitbucket.png" alt="bitbucket">
-                                                <span>Bitbucket</span>
-                                            </a>
-                                        </div>
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/dropbox.png" alt="dropbox">
-                                                <span>Dropbox</span>
-                                            </a>
-                                        </div>
-                                    </div>
-
-                                    <div class="row g-0">
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/slack.png" alt="slack">
-                                                <span>Slack</span>
-                                            </a>
-                                        </div>
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/dribbble.png" alt="dribbble">
-                                                <span>Dribbble</span>
-                                            </a>
-                                        </div>
-                                        <div class="col">
-                                            <a class="dropdown-icon-item" href="index.html#">
-                                                <img src="/static/assets/images/brands/behance.png" alt="Behance">
-                                                <span>Behance</span>
-                                            </a>
-                                        </div>
-                                    </div> <!-- end row-->
-                                </div>
-
-                            </div>
-                        </li>
-
-                        <li class="d-none d-sm-inline-block">
+                        <!-- <li class="d-none d-sm-inline-block">
                             <a class="nav-link" data-bs-toggle="offcanvas" href="index.html#theme-settings-offcanvas">
                                 <i class="ri-settings-3-fill fs-22"></i>
                             </a>
-                        </li>
+                        </li> -->
 
                         <li class="d-none d-sm-inline-block">
                             <div class="nav-link" id="light-dark-mode">
@@ -342,6 +291,7 @@
                         <li class="dropdown me-md-2">
                             <a class="nav-link dropdown-toggle arrow-none nav-user px-2" data-bs-toggle="dropdown" href="index.html#" role="button" aria-haspopup="false" aria-expanded="false">
                                 <span class="account-user-avatar">
+                                    <!-- lets user first name letter and last name letter -->
                                     <img src="/static/assets/images/users/avatar-1.jpg" alt="user-image" width="32" class="rounded-circle">
                                 </span>
                                 <span class="d-lg-flex flex-column gap-1 d-none">
@@ -356,28 +306,28 @@
                                 </div>
 
                                 <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
+                                <!-- <a href="pages-profile.html" class="dropdown-item">
                                     <i class="ri-account-circle-fill align-middle me-1"></i>
                                     <span>My Account</span>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
-                                <a href="pages-profile.html" class="dropdown-item">
+                                <!-- <a href="pages-profile.html" class="dropdown-item">
                                     <i class="ri-settings-4-fill align-middle me-1"></i>
                                     <span>Settings</span>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
-                                <a href="pages-faq.html" class="dropdown-item">
+                                <!-- <a href="pages-faq.html" class="dropdown-item">
                                     <i class="ri-customer-service-2-fill align-middle me-1"></i>
                                     <span>Support</span>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
-                                <a href="auth-lock-screen.html" class="dropdown-item">
+                                <!-- <a href="auth-lock-screen.html" class="dropdown-item">
                                     <i class="ri-lock-password-fill align-middle me-1"></i>
                                     <span>Lock Screen</span>
-                                </a>
+                                </a> -->
 
                                 <!-- item-->
                                 <a href="{% url 'logout' %}" class="dropdown-item">
